feat: implement user management and profile features with validation
- Added UserManagement component for admin to manage users including create, update, and delete functionalities.
- Integrated user search with debounce functionality.
- Implemented profile management in ProfilePage component allowing users to update their personal information and address.
- Created API service for fetching address by CEP.
- Established validation schemas for user and product data using Zod.
- Added loading indicators and notifications for user actions.
- Enhanced user interface with improved accessibility and responsiveness.

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -6,14 +6,11 @@
     "paths": {
       "@/*": ["*"]
     },
-    "module": "node16",
-    "moduleResolution": "node16",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "noEmit": false,
-    "types": ["node", "express"]
-    // esModuleInterop: true,
-    // forceConsistentCasingInFileNames: true,
-    // strict: true
+    "types": ["node"]
   },
-  "include": ["src/**/*.ts", "src/**/*.json", "enviroment.d.ts"],
+  "include": ["src/**/*.ts", "enviroment.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
