--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@zedobambu/api",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.1.0",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist .turbo node_modules",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --exit-child src/index.ts",
     "start": "node -r tsconfig-paths/register dist/index.js",
     "lint": "eslint . --config ../../packages/eslint-config-custom/index.js",
@@ -13,21 +13,24 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@zedobambu/shared-types": "workspace:*",
+    "@zedobambu/shared-validation": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "zod": "^3.23.8",
     "firebase-admin": "^12.2.0",
-    "@zedobambu/shared-types": "workspace:*"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.9",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.2",
-    "tsconfig-paths": "^4.2.0",
     "@zedobambu/eslint-config-custom": "workspace:*",
-    "@zedobambu/tsconfig-base": "workspace:*"
+    "@zedobambu/tsconfig-base": "workspace:*",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.2"
   }
 }
