--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,31 +9,39 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --config ../../packages/eslint-config-custom/index.js",
     "lint:fix": "eslint . --ext ts,tsx --fix --config ../../packages/eslint-config-custom/index.js",
     "preview": "vite preview",
-    "clean": "rm -rf dist .turbo",
+    "clean": "rimraf dist .turbo node_modules",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^5.50.1",
+    "@zedobambu/shared-types": "workspace:*",
+    "@zedobambu/shared-validation": "workspace:*",
+    "axios": "^1.7.2",
+    "clsx": "^2.1.1",
+    "firebase": "^10.12.3",
+    "lucide-react": "^0.400.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.24.0",
-    "axios": "^1.7.2",
-    "@tanstack/react-query": "^5.50.1",
-    "lucide-react": "^0.400.0",
-    "clsx": "^2.1.1",
     "tailwind-merge": "^2.4.0",
-    "firebase": "^10.12.3",
-    "@zedobambu/shared-types": "workspace:*"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-input-mask": "^3.0.5",
     "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.5.2",
-    "vite": "^5.3.1",
-    "tailwindcss": "^3.4.4",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19",
     "@zedobambu/eslint-config-custom": "workspace:*",
-    "@zedobambu/tsconfig-base": "workspace:*"
+    "@zedobambu/tsconfig-base": "workspace:*",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.1"
   }
 }
