--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-    "name": "zedobambu-monorepo",
-    "private": true,
-    "scripts": {
-      "build": "turbo run build",
-      "dev": "turbo run dev --parallel",
-      "lint": "turbo run lint",
-      "lint:fix": "turbo run lint:fix",
-      "clean": "turbo run clean && rm -rf node_modules",
-      "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-      "typecheck": "turbo run typecheck"
-    },
-    "devDependencies": {
-      "prettier": "^3.3.2",
-      "turbo": "^2.0.9"
-    },
-    "packageManager": "pnpm@9.6.0"
-  }
+  "name": "zedobambu-monorepo",
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev --parallel",
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "clean": "pnpm -r run clean && rimraf .turbo node_modules",
+    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "typecheck": "turbo run typecheck",
+    "start": "turbo run start"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "rimraf": "^6.0.1",
+    "turbo": "^2.5.4"
+  },
+  "packageManager": "pnpm@9.6.0"
+}
