--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "main": "index.js",
+    "scripts": {
+        "clean": "rimraf dist .turbo node_modules"
+    },
     "dependencies": {
         "@eslint/js": "^9.6.0",
         "typescript-eslint": "^8.0.0-alpha.31",
