--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,15 +2,17 @@
   "extends": "@zedobambu/tsconfig-base/tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
+    "noEmit": false,
+    "types": ["node"],
     "baseUrl": "./src",
     "paths": {
-      "@/*": ["*"]
-    },
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "noEmit": false,
-    "types": ["node"]
+      "@/*": ["./*"]
+    }
   },
   "include": ["src/**/*.ts", "enviroment.d.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    { "path": "../../packages/shared-types" },
+    { "path": "../../packages/shared-validation" }
+  ]
 }
