--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --config ../../packages/eslint-config-custom/index.js",
     "lint:fix": "eslint . --ext ts,tsx --fix --config ../../packages/eslint-config-custom/index.js",
     "preview": "vite preview",
-    "clean": "rimraf dist .turbo node_modules",
+    "clean": "rimraf dist .turbo tsconfig.tsbuildinfo",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
