--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
-    "clean": "pnpm -r run clean && rimraf .turbo node_modules",
+    "clean": "pnpm -r run clean && rimraf .turbo",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "typecheck": "turbo run typecheck",
     "start": "turbo run start"
