--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "clean": "rimraf dist .turbo node_modules",
+    "clean": "rimraf dist .turbo tsconfig.tsbuildinfo",
     "dev": "tsc -p tsconfig.json --watch",
     "typecheck": "tsc --noEmit"
   },
