--- a/packages/tsconfig-base/tsconfig.base.json
+++ b/packages/tsconfig-base/tsconfig.base.json
@@ -13,7 +13,7 @@
     "emitDecoratorMetadata": true,
     "incremental": true,
     "verbatimModuleSyntax": true,
-    "isolatedModules": true,
+    "noEmit": false,
     "lib": ["dom", "dom.iterable", "esnext"]
   },
   "exclude": ["node_modules", "dist", ".turbo"]
