refactor: update package.json and tsconfig files for module support and improve script commands

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -3,13 +3,17 @@
   "compilerOptions": {
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "esnext",
+    "target": "es2020",
     "jsx": "react-jsx",
     "noEmit": true,
     "isolatedModules": true,
+    "esModuleInterop": true,
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+    "moduleResolution": "node"
   },
   "include": ["src"],
   "references": [
