--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,12 +2,13 @@
   "extends": "@zedobambu/tsconfig-base/tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
-    "module": "ESNext",
-    "target": "ES2020",
-    "moduleResolution": "node",
+     "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
     "noEmit": false,
     "types": ["node"],
     "baseUrl": "./src",
