--- a/apps/client/tsconfig.node.json
+++ b/apps/client/tsconfig.node.json
@@ -2,8 +2,9 @@
   "extends": "@zedobambu/tsconfig-base/tsconfig.base.json",
   "compilerOptions": {
     "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "esnext", // ou 'node16', 'nodenext'
+    "moduleResolution": "node",
+    "target": "es2020",
     "types": ["node"]
   },
   "include": ["vite.config.ts", "tailwind.config.js", "postcss.config.js"]
