--- a/packages/tsconfig-base/tsconfig.base.json
+++ b/packages/tsconfig-base/tsconfig.base.json
@@ -2,17 +2,16 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Default",
   "compilerOptions": {
-    "target": "ES2022",
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "target": "ES2020",
     "jsx": "preserve",
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "incremental": true,
-    "verbatimModuleSyntax": true,
     "noEmit": false,
     "lib": ["dom", "dom.iterable", "esnext"]
   },
